# euler_kokkos

./: .cmake-format.py  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  REUSE.toml  _typos.toml
.github/workflows/: ci.yml  openmp.yml
cmake/: CheckMPIFeatures.cmake  FindLAPACKE.cmake  FindOpenBLAS.cmake  FindPAPI.cmake  FindPNETCDF.cmake  buildExternal_Kokkos.cmake  build_or_find_kokkos.cmake  config_hdf5.cmake  config_mpi.cmake  find_python_module.cmake  generate_config_h.cmake  initBuildType.cmake  initKokkosModulePath.cmake  plantuml.cmake  preventBuildInSource.cmake  write_version.cmake
doc/: CMakeLists.txt  conf.py.in.breathe  conf.py.in.exhale  doxyfile.in  index.rst  plantuml.cfg
doc/doc/: breathe.rst  index.rst  licenses.rst  plantuml.rst
settings/: mhd_fieldloop2d.ini  mhd_fieldloop3d.ini  test_blast_2D.ini  test_blast_3D.ini  test_four_quadrant_2D.ini  test_four_quadrant_3D.ini  test_implode_2D.ini  test_implode_2D_mpi.ini  test_implode_3D.ini  test_implode_3D_mpi.ini  test_mhd_blast_2D.ini  test_mhd_blast_3D.ini  test_mhd_brio_wu_2d.ini  test_mhd_brio_wu_2d_x.ini  test_mhd_brio_wu_2d_y.ini  test_mhd_brio_wu_3d_x.ini  test_mhd_brio_wu_3d_y.ini  test_mhd_brio_wu_3d_z.ini  test_mhd_orszag_tang_2D.ini  test_mhd_orszag_tang_3D.ini  test_mhd_rotor.ini  test_muscl_gresho_vortex_2D.ini  test_muscl_isentropic_vortex_2d.ini  test_muscl_kelvin_helmholtz_2D.ini  test_muscl_kelvin_helmholtz_2D_mhd.ini  test_muscl_kelvin_helmholtz_3D.ini  test_rayleigh_taylor_2d.ini  test_rayleigh_taylor_3d.ini
settings/submit/: readme  submit_ouessant_cpu.sh  submit_ouessant_gpu.sh
src/: CMakeLists.txt  euler_kokkos_version.h.in  main.cpp
src/muscl/: CMakeLists.txt  HydroBaseFunctor2D.h  HydroBaseFunctor3D.h  HydroInitFunctors2D.h  HydroInitFunctors3D.h  HydroRunFunctors2D.h  HydroRunFunctors3D.h  MHDBaseFunctor2D.h  MHDBaseFunctor3D.h  MHDInitFunctors2D.h  MHDInitFunctors3D.h  MHDRunFunctors2D.h  MHDRunFunctors3D.h  OrszagTangInit.h  SolverHydroMuscl.cpp  SolverHydroMuscl.h  SolverMHDMuscl.cpp  SolverMHDMuscl.h  hydro_shared.h
src/shared/: BlastParams.h  BoundariesFunctors.h  BoundariesFunctorsWedge.h  CMakeLists.txt  EulerEquations.h  FieldLoopParams.h  GravityParams.h  HydroParams.cpp  HydroParams.h  HydroState.h  IsentropicVortexParams.h  JetParams.h  KHParams.h  RiemannSolvers.h  RiemannSolvers_MHD.h  SolverBase.cpp  SolverBase.h  SolverFactory.cpp  SolverFactory.h  WedgeParams.h  enums.h  euler_kokkos_build_info.cpp  euler_kokkos_build_info.h  euler_kokkos_config.h.cmake.in  euler_kokkos_git_info.cpp  euler_kokkos_git_info.h  initRiemannConfig2d.h  kokkos_shared.h  mhd_utils.h  mpiBorderUtils.h  real_type.h  solver_utils.h  utils.cpp  utils.h
src/shared/problems/: BlastParams.h  BrioWuParams.h  FieldLoopParams.h  GreshoParams.h  ImplodeParams.h  IsentropicVortexParams.h  JetParams.h  KHParams.h  OrszagTangParams.h  RayleighTaylorInstabilityParams.h  RotorParams.h  WedgeParams.h  initRiemannConfig2d.cpp  initRiemannConfig2d.h
src/utils/: CMakeLists.txt
src/utils/config/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.h
src/utils/config/inih/: INIReader.cpp  INIReader.h  ini.cpp  ini.h
src/utils/io/: CMakeLists.txt  IO_HDF5.cpp  IO_HDF5.h  IO_PNETCDF.h  IO_ReadWrite.cpp  IO_ReadWrite.h  IO_ReadWriteBase.h  IO_VTK.cpp  IO_VTK.h  IO_Writer.cpp  IO_Writer.h  IO_WriterBase.h  IO_common.cpp  IO_common.h
src/utils/monitoring/: CMakeLists.txt  CudaTimer.h  OpenMPTimer.cpp  OpenMPTimer.h  SimpleTimer.cpp  SimpleTimer.h
src/utils/mpi/: CMakeLists.txt  GlobalMpiSession.cpp  GlobalMpiSession.h  MpiComm.cpp  MpiComm.h  MpiCommCart.cpp  MpiCommCart.h  ParallelEnv.cpp  ParallelEnv.h  mpi_utils.h
src/utils/mpiUtils/: CMakeLists.txt  ErrorPolling.cpp  ErrorPolling.h  GlobalMpiSession.cpp  GlobalMpiSession.h  MpiComm.cpp  MpiComm.h  MpiCommCart.cpp  MpiCommCart.h  TestForException.h  common_config.h  mpiEnums.h
test/: CMakeLists.txt
test/backward-cpp/: CMakeLists.txt  test_segfault.cpp
test/configMap/: CMakeLists.txt  ConfigMapTest.cpp  ConfigMapTest_mpi.cpp
test/io/: CMakeLists.txt  test_io_2d.ini  test_io_3d.ini  test_io_hdf5.cpp  test_io_hdf5_2d.ini  test_io_hdf5_3d.ini  test_io_pnetcdf.cpp  test_io_vtk.cpp
test/kokkos/: CMakeLists.txt  query_device_kokkos.cpp
test/mpiBasic/: CMakeLists.txt  testMpiHello.cpp  testMpiHelloGlobalSession.cpp  testMpiTopology_2D.cpp  testMpiTopology_2D_C_API.cpp  testMpiTopology_2D_Cpp_API.cpp  testMpiTopology_3D_C_API.cpp  testMpiTopology_3D_Cpp_API.cpp  testVtkXMLPImageDataWriter.cpp
